--- a/site-ola_mundo/index.html
+++ b/site-ola_mundo/index.html
@@ -7,5 +7,17 @@
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
+    <header>
+        <article>
+            <h2>artigo 001</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, cum nemo, nostrum velit reiciendis alias, quas perferendis nihil repellat distinctio commodi atque facilis ipsa hic quod at vero. Iure, distinctio.</p>
+        </article>
+
+        <article>
+            <h2>artigo 002</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sequi sunt, corrupti assumenda aperiam veniam unde corporis sapiente adipisci velit officia sed debitis culpa. Assumenda adipisci optio quod nostrum eos.</p>
+        </article>
+    </header>
+
 </body>
 </html>
